--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
